--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>This is HTML returned by Express!!!</h1>
+    <div id="root"></div>
 </body>
-    <script src="/static/alert.js"> </script>
+    <!-- <script src="/static/alert.js"> </script> -->
+    <script src="/static/index.bundle.js"> </script>
 </html>
